# dashboard_avis_restau

./: .gitignore  Dockerfile  pytest.ini  requirements.txt  setup.cfg
dashboard_avis_restau/: __init__.py  app.py
dashboard_avis_restau/tests/: __init__.py
data/: reviews2vec.csv
docs/: conf.py  index.rst
