[metadata]
name = dashboard_avis_restau
version = attr:dashboard_avis_restau.__version__
description = Dashboard Avis Restau
description-file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
author = Abdessamad DERRAZ
author_email = derraz.abdessamad@gmail.com
url = 'https://github.com/Abdess/dashboard_avis_restau'
download_url = https://github.com/Abdess/dashboard_avis_restau/archive/master.zip
project_urls =
    Homepage = https://Abdess.github.io/dashboard_avis_restau
    Source Code = https://github.com/Abdess/dashboard_avis_restau
    Bug Tracker = https://github.com/Abdess/dashboard_avis_restau/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

;keywords = ...
;license = ...

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    wheel
    more-itertools
    pluggy
    regex
    requests
    tqdm
    importlib_resources; python_version < "3.7"
    debtcollector
    nltk
    ;spacy
    gensim
    matplotlib
    seaborn
    wordcloud
    streamlit
    tensorflow
    Pillow
    numpy
tests_require =
    pytest
    pytest-mock
    pytest-cov
setup_requires =
    setuptools
    pytest-runner

[bdist_wheel]
universal = true

[options.extras_require]
dev =
    flake8
    tox
    pretty_errors
    twine
doc =
    sphinx
    sphinx_rtd_theme
    towncrier

; TODO add a console script to run the streamlit app
;[options.entry_points]
;console_scripts =
;    ... = ...:...

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']